--- a/lib/tasks/uot/templates/search_list_search_filter_boxes.liquid
+++ b/lib/tasks/uot/templates/search_list_search_filter_boxes.liquid
@@ -44,7 +44,7 @@
 <div data-search-filters-container>
   <select name='sort'>
     <option value=''>Sort by</option>
-    <option {% if params['sort'] == 'hourly_rate_asc'  %}selected{% endif %} value='hourly_rate_asc'>Hourly rate ascending</option>
-    <option {% if params['sort'] == 'hourly_rate_desc' %}selected{% endif %} value='hourly_rate_desc'>Houry rate descending</option>
+    <option {% if params['sort'] == 'hourly_rate_decimal_asc'  %}selected{% endif %} value='hourly_rate_decimal_asc'>Hourly rate ascending</option>
+    <option {% if params['sort'] == 'hourly_rate_decimal_desc' %}selected{% endif %} value='hourly_rate_decimal_desc'>Houry rate descending</option>
   </select>
 </div>
