--- a/lib/tasks/litvault/liquid_views/listings/show/_actual.liquid
+++ b/lib/tasks/litvault/liquid_views/listings/show/_actual.liquid
@@ -102,15 +102,16 @@
                 <th scope="col">Handling Lawyer</th>
                 <th scope="col">Offer Date</th>
               </tr>
-
-              <tr>
-                <td>Cesar Keller</td>
-                <td>07-21-2016</td>
-              </tr>
-              <tr>
-                <td>Jeff Meyer</td>
-                <td>06-30-2016</td>
-              </tr>
+              {% for collaborator in listing.transactable_collaborators %}
+                <tr>
+                  <td>
+                    {{ collaborator.user.name }}
+                  </td>
+                  <td>
+                    {{ collaborator.created_at | to_date | l: 'short' }}
+                  </td>
+                </tr>
+              {% endfor %}
             </thead>
           </table>
         </div>
